Created editor home page with lumen logo and yellow lines
There exists 3 things that need to be addressed, The loader element in Main.qml isn't working, I currently test by previewing the qml file, QT can't see the resources when I run the program rather than previewing the QML file, the lumen logo dimensions are hard coded due to QT pixelating the svg logo when down-sizing it, so could check for a better solution to this

--- a/application.qrc
+++ b/application.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
-        <file>images/lines.svg</file>
-        <file>images/logo.svg</file>
-        <file>images/man.svg</file>
+        <file>images/land_page_man.svg</file>
+        <file>images/yellow_lines.svg</file>
+        <file>images/lumen_logo.svg</file>
     </qresource>
 </RCC>
