Added page title + Cards with hover working (functionality still not implemented)
Issues in the last commit description have not been fixed, also things currently don't resize

--- a/application.qrc
+++ b/application.qrc
@@ -3,5 +3,11 @@
         <file>images/land_page_man.svg</file>
         <file>images/yellow_lines.svg</file>
         <file>images/lumen_logo.svg</file>
+        <file>images/home_icon.svg</file>
+        <file>images/location_icon.svg</file>
+        <file>images/schedule_icon.svg</file>
+        <file>images/course_icon.svg</file>
+        <file>images/instructor_icon.svg</file>
+        <file>images/more_info_icon.svg</file>
     </qresource>
 </RCC>
