--- a/application.qrc
+++ b/application.qrc
@@ -8,6 +8,7 @@
         <file>images/schedule_icon.svg</file>
         <file>images/course_icon.svg</file>
         <file>images/instructor_icon.svg</file>
-        <file>images/more_info_icon.svg</file>
+        <file>images/more_info_icon_black.svg</file>
+        <file>images/more_info_icon_yellow.svg</file>
     </qresource>
 </RCC>
