--- a/application.qrc
+++ b/application.qrc
@@ -13,5 +13,6 @@
         <file>images/icon_kpi.svg</file>
         <file>images/icon_edit.svg</file>
         <file>images/icon_remove.svg</file>
+        <file>resources/courseIcon.svg</file>
     </qresource>
 </RCC>
