--- a/application.qrc
+++ b/application.qrc
@@ -1,4 +1,5 @@
 <RCC>
-    <qresource prefix="/">
+    <qresource prefix="/resources">
+        <file>resources/courseIcon.svg</file>
     </qresource>
 </RCC>
