--- a/application.qrc
+++ b/application.qrc
@@ -14,5 +14,7 @@
         <file>images/icon_edit.svg</file>
         <file>images/icon_remove.svg</file>
         <file>resources/courseIcon.svg</file>
+        <file>resources/removeButton.png</file>
+        <file>resources/addButton.svg</file>
     </qresource>
 </RCC>
