--- a/application.qrc
+++ b/application.qrc
@@ -1,4 +1,10 @@
 <RCC>
     <qresource prefix="/">
+        <file>images/lines.svg</file>
+        <file>images/logo.svg</file>
+        <file>images/man.svg</file>
+        <file>qml/LandPage.qml</file>
+        <file>qml/LumenLogo.qml</file>
+        <file>qml/YellowLinesImage.qml</file>
     </qresource>
 </RCC>
