--- a/application.qrc
+++ b/application.qrc
@@ -11,5 +11,7 @@
         <file>images/more_info_icon_black.svg</file>
         <file>images/more_info_icon_yellow.svg</file>
         <file>images/icon_kpi.svg</file>
+        <file>images/icon_edit.svg</file>
+        <file>images/icon_remove.svg</file>
     </qresource>
 </RCC>
