finished the schedule design and some functionalties

--- a/application.qrc
+++ b/application.qrc
@@ -14,5 +14,7 @@
         <file>images/yellow_lines.svg</file>
         <file>images/addButton.svg</file>
         <file>images/removeButton.png</file>
+        <file>qml/FixedRow.qml</file>
+        <file>qml/TestWholeTable.qml</file>
     </qresource>
 </RCC>
