Started Courses Graph Tab for user's POV

--- a/application.qrc
+++ b/application.qrc
@@ -7,6 +7,9 @@
         <file>images/location_icon.svg</file>
         <file>images/schedule_icon.svg</file>
         <file>images/course_icon.svg</file>
+        <file>images/courses_graph_icon.svg</file>
+        <file>images/full_graph.svg</file>
+        <file>images/graph_card_icon.svg</file>
         <file>images/instructor_icon.svg</file>
         <file>images/more_info_icon_black.svg</file>
         <file>images/more_info_icon_yellow.svg</file>
