--- a/application.qrc
+++ b/application.qrc
@@ -13,6 +13,7 @@
         <file>images/icon_kpi.svg</file>
         <file>images/icon_edit.svg</file>
         <file>images/icon_remove.svg</file>
+        <file>images/gear_icon.svg</file>
         <file>fonts/Poppins-Regular.ttf</file>
         <file>images/icon_add.svg</file>
     </qresource>
