Finished user schedules optimization page

--- a/application.qrc
+++ b/application.qrc
@@ -16,5 +16,7 @@
         <file>images/gear_icon.svg</file>
         <file>fonts/Poppins-Regular.ttf</file>
         <file>images/icon_add.svg</file>
+        <file>images/icon_maximize.svg</file>
+        <file>images/icon_schedule_white.svg</file>
     </qresource>
 </RCC>
